# control_gen3

./: .gitmodules  code_Analysis
gen3_controller/: CMakeLists.txt  package.xml
gen3_controller/include/gen3_controller/: data_container.h  gen3_controller.h  gen3_interface.h  util.h
gen3_controller/src/: controller.cpp  controller2.cpp  gen3_interface.cpp  main_loop.cpp  main_test.cpp  util.cpp
kortex_api/: CMakeLists.txt
kortex_bringup/launch/: gen3_nogripper_6d.launch.py  gen3_nogripper_7d.launch.py  kortex_control.launch.py  kortex_control_6d.launch.py  kortex_control_7d.launch.py  kortex_sim_control.launch.py  kortex_sim_control_7d.launch.py
kortex_description/arms/gen3/6dof/config/: ros2_controllers.yaml
kortex_description/arms/gen3/7dof/config/: ros2_controllers.yaml  ros2_controllers_new.yaml
kortex_description/arms/gen3/7dof/urdf/: gen3_7d copy.urdf  gen3_7d.gv  gen3_7d.urdf
kortex_description/config/: d7_initial_positions.yaml
kortex_description/launch/: view_robot.launch.py
kortex_description/robots/: gen3.xacro  gen3_6d.xacro  gen3_7d.xacro  kinova_6d.urdf.xacro  kinova_7d.urdf.xacro
kortex_driver/include/kortex_driver/: hardware_interface.hpp
kortex_driver/src/: hardware_interface.cpp
kortex_moveit_config/kinova_gen3_7dof_robotiq_2f_85_moveit_config/: .setup_assistant
kortex_moveit_config/kinova_gen3_7dof_robotiq_2f_85_moveit_config/config/: gen3.srdf  initial_positions.yaml  moveit_controllers.yaml  ros2_controllers.yaml
kortex_moveit_config/kinova_gen3_7dof_robotiq_2f_85_moveit_config/launch/: robot.launch.py
